# stupidChess

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  GameObject.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputHandler.cpp  InputHandler.h  LoaderParams.h  MainMenuState.cpp  MainMenuState.h  MenuButton.cpp  MenuButton.h  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h  README.md  SDLGameObject.cpp  SDLGameObject.h  Structure.txt  StupidChess.vcxproj  StupidChess.vcxproj.filters  TODOList.txt  TextureManager.cpp  TextureManager.h  Vector2D.h  debug.txt  log.txt  main.cpp
chessLogs/saves/: DanyaTupay.sav
src/: Main.java
src/Controller/: AdvanceController.java  BasicController.java  Controller.java
src/Events/: CheckEvent.java  GameEventListener.java  LogEvent.java  LogEventListener.java  MateEvent.java  PromotionEvent.java  QuitEvent.java  QuitResetListener.java  ResetEvent.java  SaveLoadEvent.java  SaveLoadListener.java  Settings.java  SettingsEvent.java  SettingsEventListener.java  UpdateEvent.java
src/Logging/: Logger.java  Saver.java
src/Network/: Client.java  Net.java  Server.java
src/Piece/: Bishop.java  Board.java  King.java  Knight.java  Pawn.java  Piece.java  Queen.java  Rook.java  Turn.java
src/View/: ScreenDisplay.java  SettingsWindow.java  TextDisplay.java  View.java
